[Fabric] Surround and text rendering fixes (#24)
* Update Render2DUtil.java

* Surround